@@ -1,6 +1,30 @@
 \name{fortify.sp}
+\alias{fortify.Line}
+\alias{fortify.Lines}
+\alias{fortify.Polygon}
+\alias{fortify.Polygons}
 \alias{fortify.sp}
+\alias{fortify.SpatialLinesDataFrame}
+\alias{fortify.SpatialPolygons}
+\alias{fortify.SpatialPolygonsDataFrame}
 \title{Fortify method for classes from the sp package.}
+\usage{
+  \method{fortify}{SpatialPolygonsDataFrame} (model, data,
+    region = NULL, ...)
+
+  \method{fortify}{SpatialPolygons} (model, data, ...)
+
+  \method{fortify}{Polygons} (model, data, ...)
+
+  \method{fortify}{Polygon} (model, data, ...)
+
+  \method{fortify}{SpatialLinesDataFrame} (model, data,
+    ...)
+
+  \method{fortify}{Lines} (model, data, ...)
+
+  \method{fortify}{Line} (model, data, ...)
+}
 \arguments{
   \item{model}{\code{SpatialPolygonsDataFrame} to convert
   into a dataframe.}
@@ -14,5 +38,13 @@
 \description{
   To figure out the correct variable name for region,
   inspect \code{as.data.frame(model)}.
+}
+\examples{
+if (require("maptools")) {
+ sids <- system.file("shapes/sids.shp", package="maptools")
+ nc1 <- readShapePoly(sids,
+   proj4string = CRS("+proj=longlat +datum=NAD27"))
+ nc1_df <- fortify(nc1)
+}
 }
 
